<resources>
    <string name="app_name">Vue</string>
    <string name="app_version">Version: Beta 1.10 \n\n</string>
    <string name="app_id">606559369366437</string>
    <string name="instagram_client_id">379d744556c743c090c8a2014779f59f</string>
    <string name="instagram_client_secret">fd6ec75e44054da1a5088ad2d72f2253</string>
    <string name="instagram_callbackurl">instagram://connect</string>
    <string name="discard_dataentry_screen_changes">Would you like to discard the changes?</string>
    <string name="discard_comment">Would you like to discard the comment?</string>
    <string name="trending">Trending</string>
    <string name="trending_aisles_tag">aisle/trending</string>
    <string name="vue_fb_gplus_login_mesg">Please login with Facebook or Google+</string>
    <string name="vue_server_login_mesg">Please wait while uploading user details to server</string>
    <string name="dataentry_edit_permission">Do you want to change the existing data?</string>
    <string name="dataentry_mandtory_field_mesg">Please enter Lookingfor.</string>
    <string name="dataentry_mandtory_field_add_aisleimage_mesg">Please Add Aisle Image.</string>
    <string name="limit_tag">limit</string>
    <string name="offset_tag">offset</string>
    <string name="uploading_mesg">Uploading...</string>
    <string name="uploading_aisle_mesg">Uploading Aisle...</string>
    <string name="uploaded_aisle_mesg">Aisle was created</string>
    <string name="uploaded_image_mesg">Image was added</string>
    <string name="uploading_image_mesg">Uploading Image...</string>
    <string name="deleting_mesg">Deleting...</string>
    <string name="upload_successful_mesg">Upload successful</string>
    <string name="delete_successful_mesg">Delete successful</string>
    <string name="upload_failed_mesg">Upload failed</string>
    <string name="delete_failed_mesg">Delete failed</string>
    <string name="discard_othersource_image_mesg">Would you like to discard the other application image?</string>
    <string name="middle_earth">Visiting Middle Earth</string>
    <string name="profile_owner">Profile Owner</string>
    <string name="aisle_owner_profile_desc">Profile of the aisle owner</string>
    <string name="progress_message">Signing in to Google&#8230;</string>
    <string name="app_installation_mesg">Enable Share via</string>
    <string name="no_thanks_click_alert_mesg">How may we address you?</string>
    <string name="plus_example_deep_link_id">/+/mobile/android/</string>
    <string name="plus_example_deep_link_url">        https://developers.google.com/+/mobile/android/</string>
    <string name="googleplus_button_text">Sign In with Google</string>
    <string name="instagram_button_text">Sign In with Instagram</string>
    <string name="facebook_button_text">Sign In with Facebook</string>
    <string name="cancel_button_text">Continue as Guest</string>
    <string name="share_via_mesg">SHARE VIA</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log Out</string>
    <string name="com_facebook_loginview_log_in_button">Log In</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log Out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log In&#8230;</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged In</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not Logged In</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="yes_mesg">Yes</string>
    <string name="fb_no_friends">There are no friends to show.</string>
    <string name="no_mesg">No</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Please log in via https://www.facebook.com or https://m.facebook.com to re-enable the app to connect with Facebook.</string>
    <string name="com_facebook_requesterror_relogin">The app is not connected with Facebook, please log in and reconnect this app.</string>
    <string name="com_facebook_requesterror_password_changed">Your password on Facebook has changed, please reconnect the app with Facebook.</string>
    <string name="com_facebook_requesterror_reconnect">An error occurred when connecting with Facebook, please reconnect the app with Facebook.</string>
    <string name="alert_Dialog_Network">No Network Connection: Check Network Settings</string>
    <string name="com_facebook_requesterror_permissions">An app connection with Facebook failed due to insufficient permissions, please grant the app permissions to perform the operation.</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="Image">Image</string>
    <string name="gmail">Gmail</string>
    <string name="create_ailse_screen_title">Create Aisle</string>
    <string name="add_imae_to_aisle_screen_title">Add image</string>
    <string name="edit_aisle_screen_title">Edit Aisle</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted.</string>
    <string name="error">Error</string>
    <string name="photo_post">Photo Post</string>
    <string name="duplicatepostmesg">This message was already shared.</string>
    <string name="facebookwarningmesg">This Message Contains Blocked Content: Some content in this message has been reported as abusive by Facebook users.</string>
    <string name="pendingActionBundleKey">com.example.learnfb:PendingAction</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">Ok</string>
    <string name="continue_earning">Continue earning</string>
    <string name="redeem_it_now">Redeem it now</string>
    <string name="cache_dirname">GoogleImgApp_Cache</string>
    <string name="profile">Profile</string>
    <string name="create_aisle">Create Aisle</string>
    <string name="report_bug">Report Bug</string>
    <string name="pending_aisle">Pending Aisles</string>
    <string name="rfresh_aisle">Refresh Aisles</string>
    <string name="edit_aisle">Edit Aisle</string>
    <string name="add_image">Add Image</string>
    <string name="no_network">No network, check network settings</string>
    <string name="image_contentDescription">image</string>
    <string name="add_comment">Add Comment</string>
    <string name=" already_logged_in_msg"> Already Logged in</string>
    <string name="create_aisle_screen_title">Create Aisle</string>
    <string name="decision_screen_title">Select your choice</string>
    <string name="hint_search">Search</string>
    <string name="sidemenu_option_Trending_Aisles">Trending</string>
    <string name="pending_aisle_option">Pending Aisles</string>
    <string name="sidemenu_option_Me">Me</string>
    <string name="sidemenu_option_Categories">Categories</string>
    <string name="sidemeun_option_Settings">Settings</string>
    <string name="sidemeun_option_Notifications">Notifications</string>
    <string name="sidemenu_option_Profile">Profile</string>
    <string name="sidemenu_option_Invite_Friends">Invite Friends</string>
    <string name="sidemenu_option_Help">Help</string>
    <string name="sidemenu_option_About">About</string>
    <string name="sidemenu_option_FeedBack">Feedback</string>
    <string name="sidemenu_option_Login">Login</string>
    <string name="sidemenu_sub_option_Apparel">Apparel</string>
    <string name="sidemenu_sub_option_Beauty">Beauty</string>
    <string name="sidemenu_sub_option_Electronics">Electronics</string>
    <string name="sidemenu_sub_option_Entertainment">Entertainment</string>
    <string name="sidemenu_sub_option_Events">Events</string>
    <string name="sidemenu_sub_option_Food">Food</string>
    <string name="sidemenu_sub_option_Home">Home</string>
    <string name="sidemenu_sub_option_Facebook">Facebook</string>
    <string name="sidemenu_sub_option_Twitter">Twitter</string>
    <string name="sidemenu_sub_option_Googleplus">Google+</string>
    <string name="sidemenu_sub_option_My_Aisles">My Aisles</string>
    <string name="sidemenu_sub_option_Interactions">Interactions</string>
    <string name="sidemenu_sub_option_Bookmarks">Bookmarks</string>
    <string name="sidemenu_sub_option_Recently_Viewed_Aisles">Recently viewed</string>
    <string name="sidemenu_sub_option_My_Pointss">My Points</string>
    <string name="done">Done</string>
    <string name="more">More</string>
    <string name="browser">Browser</string>
    <string name="about_Vue">About Vue</string>
    <string name="sharing_mesg">Sharing....</string>
    <string name="loading_mesg">Loading....</string>
    <string name="isconnected_mesg">is connected.</string>
    <string name="contact_us">Contact us</string>
    <string name="pleasewait_mesg">Please wait...</string>
    <string name="publish_actions">publish_actions</string>
    <string name="contact_us_text">Please provide feedback by writing to us at</string>
    <string name="email_id">vue@thesilverlabs.com</string>
    <string name="vue_content">Privacy Policy</string>
    <string name="vue_terms">Terms of Service</string>
    <string name="about_tabel_Content_text">1. Introduction \n2. Privacy Policy \n3. Terms of Service \n4. Contact us</string>
    <string name="feedback_form_text_info">Please write to us about how we might improve fashionwrap to suit your needs. Whether you would like us to cover more topics, improve the user experiences, or do something else better, please write to us. We will appreciate it very much!</string>
    <string name="aboutedittext">Type your message here</string>
    <string name="clear">Clear</string>
    <string name="send">Send</string>
    <string name="data_entry_invite_friends_mandatory_mesg">Please choose atleast one friends to invite</string>
    <string name="no_camera_label">Sorry, Threre is no camera in this device.</string>
    <string name="invite">Invite</string>
    <string name="no_notification_text">0 messages\nWhen you have message they will show here.</string>
    <string name="abouttextfedbacktext">\nPlease write to us about how we might improve</string>
    <string name="about_content">Thank you for trying out Vue. This is about shopping when you want, however you want and still having 
        friends and experts help you along when you are looking for something. 
         Just ask our users what looks good or what to wear for that first date or even help you find a pair of shoes 
         that goes with that perfect dress!  Come and be an early member of our community and help us get your friends on too so you
          have people you care about giving you suggestions!</string>
    <string name="show_notifications">ShowNotifications</string>
</resources>