<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/about_Vue"
            android:textColor="@color/orange"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/app_version"
            android:textColor="@color/orange" />

        <TextView
            android:id="@+id/about_table_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/about_tabel_Content_text"
            android:textColor="@color/orange"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="Introduction"
            android:textColor="@color/orange"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/about_content"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="4dp"
            android:background="@color/orange" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/contentheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:text="@string/vue_content"
                android:textColor="@color/orange"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/contenttext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/about_content"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/secondheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/contact_us"
            android:textColor="@color/orange"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lasttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/contact_us_text"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/fishwapmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="2dp"
            android:text="@string/email_id"
            android:textColor="@color/orange"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>