<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/screentwo"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/aboutfishwrap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/feedback_form_text_info"
            android:textColor="@color/orange" />

        <TextView
            android:id="@+id/contentone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aboutfishwrap"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="8dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editone"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/contentone"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:cursorVisible="true"
            android:gravity="top"
            android:hint="@string/aboutedittext"
            android:imeOptions="actionSend"
            android:maxLines="8"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/contenttwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editone"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="14dp"
            android:lineSpacingExtra="2dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/phoneinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contenttwo"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="12dp"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <!-- android:layout_above="@+id/phoneinfo" -->

            <Button
                android:id="@+id/cancle"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:background="@drawable/red_bg_selector"
                android:text="@string/clear" />

            <View
                android:layout_width="2dp"
                android:layout_height="40dp" />

            <Button
                android:id="@+id/send"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:background="@drawable/red_bg_selector"
                android:text="@string/send" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>