<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="16dip"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true" >

        <RelativeLayout
            android:id="@+id/googleplusign_in_buttonlayout"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginLeft="24dip"
            android:layout_marginRight="24dip"
            android:layout_marginBottom="8dip"
            android:background="@drawable/googleplus_background" >

            <Button
                android:id="@+id/googleplusign_in_button"
                android:layout_width="48dip"
                android:layout_height="48dip"
                android:background="@drawable/googleplus" />

            <TextView
                android:id="@+id/googleplustext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/googleplus_button_text"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fblog_in_buttonlayout"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginLeft="24dip"
          android:layout_marginBottom="8dip"
              android:layout_marginRight="24dip"
            android:background="@drawable/facebookbtnbg" >

            <Button
                android:id="@+id/fblog_in_button"
                android:layout_width="48dip"
                android:layout_height="48dip"
                android:background="@drawable/loginfb" />

            <TextView
                android:id="@+id/fblog_in_buttontext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/facebook_button_text"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/cancellayout"
            android:layout_width="match_parent"
            android:layout_marginLeft="24dip"
            android:layout_height="48dip"
            android:layout_marginBottom="8dip"
              android:layout_marginRight="24dip"
            android:background="@drawable/cancel_button_bg" >

            <Button
                android:id="@+id/cancel"
                android:layout_width="36dip"
                android:layout_marginLeft="8dip"
                android:layout_height="36dip"
                android:layout_centerVertical="true"
                android:background="@drawable/closebtn" />

            <TextView
                android:id="@+id/canceltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/cancel_button_text"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>
       
    </LinearLayout>

</RelativeLayout>